tests/baselines/reference/reboundIdentifierOnImportAlias.errors.txt
==== tests/cases/compiler/reboundIdentifierOnImportAlias.ts (1 errors) ====
    module Foo {
        export var x = "hello";
    }
    module Bar {
        var Foo = 1;
        import F = Foo;
                   ~~~
!!! reboundIdentifierOnImportAlias.ts(6,16): error TS2187: Internal module reference 'Foo' in import declaration does not reference module instance for 'Foo'.
    }